got heart feature in, fixed spacing

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -12,6 +12,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      margin-bottom: 15px;
 
       h4 {
         text-transform: uppercase;
@@ -86,8 +87,8 @@
   padding-right: 45px;
   position: relative;
   .rating-value {
-    position: absolute;
-    top: 10px;
+      top: 8px;
+      position: absolute;
     right: 0px;
     font-weight: bold;
   }
